app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
